# gfnx

./: .gitignore  AGENTS.md  LICENCE  README.md  final_files.txt  pyproject.toml  squash_blocks.sh
baselines/: db_amp.py  db_bitseq.py  db_gfp.py  db_hypergrid.py  db_hypergrid_multiseed.py  db_qm9_small.py  db_tfbind.py  fldb_phylo.py  mdb_dag.py  mdb_dag_replay_buffer.py  soft_dqn_hypergrid.py  subtb_bitseq.py  subtb_hypergrid.py  subtb_tfbind.py  tb_amp.py  tb_bitseq.py  tb_hypergrid.py  tb_hypergrid_multiseed.py  tb_ising.py  tb_qm9_small.py  tb_tfbind.py
baselines/configs/: db_amp.yaml  db_bitseq.yaml  db_gfp.yaml  db_hypergrid.yaml  db_hypergrid_multiseed.yaml  db_phylo.yaml  db_qm9_small.yaml  db_tfbind.yaml  mdb_dag.yaml  mdb_dag_replay_buffer.yaml  soft_dqn_hypergrid.yaml  subtb_bitseq.yaml  subtb_hypergrid.yaml  subtb_tfbind.yaml  tb_amp.yaml  tb_bitseq.yaml  tb_hypergrid.yaml  tb_hypergrid_multiseed.yaml  tb_tfbind.yaml
baselines/utils/: checkpoint.py  logger.py
gfnx-docs/docs/: baselines.md  index.md  walkthrough.md
gfnx-docs/docs/metrics/: base.md  elbo.md  eubo.md  modes.md  reward_delta.md
proxy/: README.md  train_proxy.py
proxy/configs/: amp.yaml  gfp.yaml
proxy/datasets/: amp.py  base.py  gfp.py
src/gfnx/: __init__.py  base.py  spaces.py
src/gfnx/environment/: __init__.py  amp.py  bitseq.py  dag.py  gfp.py  hypergrid.py  ising.py  phylogenetic_tree.py  qm9_small.py  sequence.py  tfbind.py
src/gfnx/metrics/: __init__.py  approx_distribution.py  base.py  (+7 more)
tests/baselines/: test_subtb_hypergrid.py
tests/environments/: test_rollouts.py
(+52 files in other folders)
